docs/7.57/md/abenddic_tools.md
---
title: "DDIC - Tools for Dictionary Objects"
description: |
  Dictionary objects(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendictionary_object_glosry.htm 'Glossary Entry') are maintained using the ABAP Dictionary tool in ABAP Workbench and the ABAP Development Tools (ADT)(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadt
version: "7.57"
category: "oop"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_tools.htm"
abapFile: "abenddic_tools.htm"
keywords: ["do", "if", "try", "method", "class", "data", "types", "abenddic", "tools"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Dictionary (DDIC)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_dictionary.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: DDIC - Tools for Dictionary Objects, ABENDDIC_TOOLS, 757%0D%0A%0D%0AError:%0D%0A%0D%0
A%0D%0A%0D%0ASuggestion for improvement:)

DDIC - Tools for Dictionary Objects

[Dictionary objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendictionary_object_glosry.htm "Glossary Entry") are maintained using the ABAP Dictionary tool in ABAP Workbench and the [ABAP Development Tools (ADT)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadt_glosry.htm "Glossary Entry"). The ABAP Dictionary tool in ABAP Workbench and the ADT tools each cover parts of the set of dictionary objects, but most objects can be maintained using both methods.

-   [The ABAP Dictionary Tool in ABAP Workbench](#abenddic-tools-1-------tools-in-adt---@ITOC@@ABENDDIC_TOOLS_2)
    -   [Form-Based Tools](#abenddic-tools-3-----------source-code-based-tools---@ITOC@@ABENDDIC_TOOLS_4)

The ABAP Dictionary Tool in ABAP Workbench   

The ABAP Dictionary tool is integrated into the SAP GUI-based [ABAP Workbench](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_workbench_glosry.htm "Glossary Entry") and can be called as a standalone tool using the transaction SE11. In all other ABAP Workbench tools, the associated tool for a dictionary object can be called using forward navigation.

The ABAP Dictionary tool in ABAP Workbench includes the functions required to create and maintain the following dictionary objects:

-   [Data types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_data_types.htm)
-   [DDIC database tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_database_tables.htm)
-   [DDIC table views](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_table_views.htm)
-   [Enhancements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_enhancements.htm)
-   [Replacement objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_replacement_objects.htm)
-   [Lock objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlock_object_glosry.htm "Glossary Entry")
-   [Search helps](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abensearch_help_glosry.htm "Glossary Entry")

Dictionary objects are maintained in form-based tools, which means that their properties are entered on SAP GUI screens and stored as metadata in the associated system tables when saved.

More information about the ABAP Dictionary tool in ABAP Workbench can be found in the ABAP Dictionary documentation in SAP Help Portal.

Hint

The names of the properties of dictionary objects that can be maintained in the ABAP Dictionary tool of the ABAP Workbench follow the names used in that tool.

Tools in ADT   

The [ABAP Development Tools (ADT)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadt_glosry.htm "Glossary Entry") provide form-based and source-code-based tools for maintaining dictionary objects.

Form-Based Tools   

For the following ABAP Dictionary objects, the [ABAP Development Tools (ADT)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadt_glosry.htm "Glossary Entry") offer form-based tools that work in a similar way to the ABAP Dictionary tools in ABAP Workbench:

-   [Data elements](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_data_elements.htm)
-   [Domains](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_domains.htm)
-   [DDIC table types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_table_types.htm)
-   [Technical properties of database tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_database_tables_techspec.htm)
-   [DDIC external views](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_external_views.htm)
-   [Lock objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenlock_object_glosry.htm "Glossary Entry")

A description of these tools can be found under Working with Classic Objects in ABAP Dictionary.

Source-Code-Based Tools   

The [ABAP Development Tools (ADT)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenadt_glosry.htm "Glossary Entry") offer source-code-based editors for the following ABAP Dictionary objects:

-   [DDIC structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_structures.htm), [DDIC database tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_database_tables.htm), [append structures](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_append_structures.htm)
    
    These dictionary objects are edited using the following [Dictionary DDL](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendictionary_ddl_glosry.htm "Glossary Entry") statements:
    
    -   [DEFINE STRUCTURE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddicddl_define_structure.htm)
    -   [DEFINE TABLE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddicddl_define_table.htm)
    -   [EXTEND TYPE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddicddl_extend_type.htm)
    
    Here, however, the source code of the dictionary objects is not saved and transported. Instead, the source code of a dictionary object of this type is generated from the metadata of the associated system tables. Conversely, the metadata itself is derived from source code directly and saved to the system tables. Like in ABAP CDS, the source code contains SQL parts that define the data structure and annotations (introduced using @) that define properties.
    
-   [Type pools](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_type_groups.htm)
    
    Type pools are edited in ABAP Editor in ADT.
    
-   [Dependency rules](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_dependency_rules.htm)
    
    Dependency rules are defined using the following [Dictionary DDL](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendictionary_ddl_glosry.htm "Glossary Entry") statement:
    
    -   [DEFINE DEPENDENCY RULE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddicddl_define_drul.htm)
    
    The source text for dependency rules is saved and transported and a dependency rule is created from the source code.
    
-   [Dynamic caches](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_dynamic_caches.htm)
    
    Dynamic caches are defined using the following [Dictionary DDL](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendictionary_ddl_glosry.htm "Glossary Entry") statement:
    
    -   [DEFINE DYNAMIC CACHE](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddicddl_define_dynamic_cache.htm)
    
    The source code for dynamic caches is saved and transported.
    

Hints

-   The standalone transportable [table-specific technical properties of DDIC database tables](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenddic_database_tables_techspec.htm) are maintained in a form-based tool in ADT and not in Dictionary DDL.
-   A description of the Dictionary DDL for structures, DDIC database tables, and append structures can also be found in the ADT documentation Syntax of ABAP Dictionary Objects.

Example

The following source code shows a definition of the DDIC database table SCARR using [Dictionary DDL](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendictionary_ddl_glosry.htm "Glossary Entry"). The annotations defined the technical and semantic properties of the table. The structure itself is defined after the statement DEFINE TABLE, with further annotations describing the properties of database fields.

@EndUserText.label : 'Airline'
@AbapCatalog.enhancementCategory : #EXTENSIBLE\_CHARACTER\_NUMERIC
@AbapCatalog.tableCategory : #TRANSPARENT
@AbapCatalog.deliveryClass : #A
@AbapCatalog.dataMaintenance : #ALLOWED
define table scarr {
  @AbapCatalog.foreignKey.keyType : #KEY
  @AbapCatalog.foreignKey.screenCheck : true
  key mandt  : s\_mandt not null
    with foreign key \[0..\*,1\] t000
      where mandt = scarr.mandt;
  key carrid : s\_carr\_id not null;
  carrname   : s\_carrname not null;
  @AbapCatalog.foreignKey.keyType : #NON\_KEY
  @AbapCatalog.foreignKey.screenCheck : true
  currcode   : s\_currcode not null
    with foreign key \[0..\*,1\] scurx
      where currkey = scarr.currcode;
  url        : s\_carrurl not null; }